# oacp

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: from-claude-p.md
docs/guides/: adoption.md  doctor.md  prompt_caching.md  runtime_capability_matrix.md  setup.md  unified_skill_spec.md  versioning.md
docs/protocol/: agent_profiles.md  agent_safety_defaults.md  autonomy.md  credential_scoping.md  cross_runtime_sync.md  dispatch_states.yaml  inbox_outbox.md  mcp_integration.md  message_signing.md  multi_agent_shared_workspace.md  org_memory.md  packet_states.yaml  review_loop.md  runtime_capabilities.md  session_init.md  skills_manifest.yaml  task_negotiation.md
examples/demo-workspace/: README.md
examples/demo-workspace/org-memory/: decisions.md  recent.md  rules.md
examples/demo-workspace/org-memory/events/: 20260504-093015-postgres-over-dynamodb.md  20260508-141220-utc-timestamps-pr-review.md  20260515-102045-utc-timestamps-webhooks.md  20260521-163330-utc-timestamps-rule-proposal.md  20260527-110500-idempotency-keys-merged.md  20260602-090210-parcel-api-v020-released.md
examples/quickstart/: README.md
mcp_servers/: oacp_coordinator.py
oacp/: __init__.py  cli.py  envelope_hook.py
scripts/: _oacp_constants.py  _oacp_env.py  add_agent.py  agent_profile.py  autonomy_gate.py  check_quality_gate.py  claude_envelope_hook.py  codex_session_init.py  create_handoff_packet.py  envelope_compiler.py  handoff_schema.py  init_org_memory.py  init_packet.sh  init_project_workspace.py  init_project_workspace.sh  key_cli.py  memory_archive_common.py  memory_cli.py  memory_sync.py  message_signing.py  message_verify.py  normalize_findings.py  oacp_doctor.py  oacp_inbox.py  oacp_watch.py  preflight.py  promote_to_archive.py  record_autonomy_outcome.py  restore_from_archive.py  send_inbox_message.py  session_lifecycle_hooks.py  setup_runtime.py  trust_cli.py  trust_root.py  update_workspace.sh  validate_agent_card.py  validate_message.py  write_event.py
templates/: agent_card.template.yaml  agent_profile.template.yaml  agent_status.template.yaml  checkpoint.template.md  findings_packet.template.yaml  github_actions_quality_gate.yaml  handoff_packet.template.yaml  inbox_message.template.yaml  manual_validation.template.md  merge_decision.template.md  receiver_config.template.yaml  review_packet.template.md  runtime_capabilities.yaml  skills_manifest.template.yaml  test_packet.template.md
templates/claude/agents/: role_agent.template.md
templates/claude/rules/: guardrail.template.md
templates/guardrails/: coding_standards.template.md  safe_commands.template.md  secrets_rules.template.md
templates/org-memory/: decisions.md  recent.md  rules.md
templates/org-memory/events/: 20260317-170120-example-api-convention.md
templates/roles/: role_baseline.template.md  role_definition.template.yaml
tests/: test_add_agent.py  test_agent_profile.py  test_autonomy_conformance_fixtures.py  test_autonomy_gate.py  test_claude_envelope_hook.py  test_codex_session_init.py  test_create_handoff_packet.py  test_envelope_compiler.py  test_envelope_conformance_fixtures.py  test_github_workflows.py  test_handoff_schema.py  test_init_project_workspace.py  test_memory_archive.py  test_memory_sync.py  test_message_signing.py  test_message_verify.py  test_oacp_cli.py  test_oacp_constants.py  test_oacp_coordinator.py  test_oacp_doctor.py  test_oacp_env.py  test_oacp_inbox.py  test_oacp_watch.py  test_preflight.py  test_record_autonomy_outcome.py  test_review_loop.py  test_send_inbox_message.py  test_session_lifecycle_hooks.py  test_setup_runtime.py  test_signing_conformance.py  test_trust_root.py  test_update_workspace.py  test_validate_agent_card.py  test_validate_message.py  test_workspace_discovery.py  test_write_event.py
tests/conformance/autonomy/: README.md
tests/conformance/autonomy/actuals/: checkpoint_breach.yaml  continuation_drift.yaml  continuation_within.yaml  declaration_error.yaml  declaration_intent.yaml  top_level_side_effect_keys.yaml
tests/conformance/autonomy/audits/: prior_thread_grant_approved.yaml
tests/conformance/autonomy/configs/: always_pause.yaml  auto_review_continuation_enabled.yaml  auto_review_external_pause.yaml  auto_review_standard.yaml  auto_review_tight.yaml  malformed_config.yaml
tests/conformance/autonomy/expected/: always_pause_task.yaml  ambiguous_scope_pauses.yaml  brainstorm_destructive_pauses.yaml  brainstorm_side_effect_verbs_auto_accepts.yaml  brainstorm_without_profile_auto_accepts.yaml  checkpoint_breach_pauses.yaml  clean_auto_review_task.yaml  continuation_grant_destructive_pauses.yaml  continuation_grant_disabled_pauses.yaml  continuation_grant_drift_pauses.yaml  continuation_grant_enabled_auto_accepts.yaml  continuation_grant_external_uncovered_pauses.yaml  declaration_error_pauses.yaml  declaration_intent_checkpoint_pauses.yaml  declared_destructive_ops_pauses.yaml  expired_message_pauses.yaml  guardrails_fence_auto_accepts.yaml  hard_stop_dangerously_skip_permissions_pauses.yaml  hard_stop_external_side_effects_pauses.yaml  minutes_46_pauses.yaml  (+31 more)
tests/conformance/envelope/: README.md
tests/conformance/signing/: README.md  regen_fixtures.py
(+115 files in other folders)
