[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "oacp-cli"
version = "0.1.9"
description = "Open Agent Coordination Protocol CLI for file-based multi-agent workflows"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
  { name = "Kiloloop" },
]
dependencies = [
  "PyYAML>=6.0",
]
keywords = ["agents", "cli", "coordination", "oacp", "workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/kiloloop/oacp"
Repository = "https://github.com/kiloloop/oacp"
Documentation = "https://github.com/kiloloop/oacp/blob/main/SPEC.md"
Issues = "https://github.com/kiloloop/oacp/issues"

[project.scripts]
oacp = "oacp.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["oacp"]

[tool.hatch.build.targets.wheel.force-include]
"scripts/codex_session_init.py" = "oacp/_scripts/codex_session_init.py"
"scripts/_oacp_env.py" = "oacp/_scripts/_oacp_env.py"
"scripts/handoff_schema.py" = "oacp/_scripts/handoff_schema.py"
"scripts/oacp_doctor.py" = "oacp/_scripts/oacp_doctor.py"
"scripts/init_project_workspace.py" = "oacp/_scripts/init_project_workspace.py"
"scripts/send_inbox_message.py" = "oacp/_scripts/send_inbox_message.py"
"scripts/session_lifecycle_hooks.py" = "oacp/_scripts/session_lifecycle_hooks.py"
"scripts/validate_message.py" = "oacp/_scripts/validate_message.py"
"scripts/add_agent.py" = "oacp/_scripts/add_agent.py"
"scripts/agent_profile.py" = "oacp/_scripts/agent_profile.py"
"scripts/memory_cli.py" = "oacp/_scripts/memory_cli.py"
"scripts/memory_archive_common.py" = "oacp/_scripts/memory_archive_common.py"
"scripts/promote_to_archive.py" = "oacp/_scripts/promote_to_archive.py"
"scripts/restore_from_archive.py" = "oacp/_scripts/restore_from_archive.py"
"scripts/setup_runtime.py" = "oacp/_scripts/setup_runtime.py"
"scripts/init_org_memory.py" = "oacp/_scripts/init_org_memory.py"
"scripts/write_event.py" = "oacp/_scripts/write_event.py"
"templates/runtime_capabilities.yaml" = "oacp/_templates/runtime_capabilities.yaml"
"templates/org-memory/recent.md" = "oacp/_templates/org-memory/recent.md"
"templates/org-memory/decisions.md" = "oacp/_templates/org-memory/decisions.md"
"templates/org-memory/rules.md" = "oacp/_templates/org-memory/rules.md"
"templates/agent_card.template.yaml" = "oacp/_templates/agent_card.template.yaml"
"templates/agent_profile.template.yaml" = "oacp/_templates/agent_profile.template.yaml"
"templates/claude/agents/role_agent.template.md" = "oacp/_templates/claude/agents/role_agent.template.md"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
